--- a/src/coms/personal-center/views/personal-center.html
+++ b/src/coms/personal-center/views/personal-center.html
@@ -61,4 +61,4 @@
 </div>
 
 <!-- 模态框（Modal） -->
-<!-- <div  ng-controller="uploadResController" data-ng-include="'/coms/personal-center/views/upload-modal.html'"></div> -->
+<div  ng-controller="uploadResController" data-ng-include="'/coms/personal-center/views/upload-modal.html'"></div>
