--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -1,19 +1,4 @@
-//#preview-container .modal-content{
-//  background: #fff;
-//}
-//#preview-container .modal-footer
-//{
-//  border-top:1px solid #ccc;
-//  border: none;
-//  text-align: right;
-//}
-//
-//#preview-container .modal-body textarea{
-//  width: 100%;
-//  min-height: 80px;
-//  border-radius: 10px;
-//  outline: none;
-//}
+/*评论样式*/
 #preview-container .editReplace
 {
     padding-right: 5px;
@@ -28,8 +13,15 @@
 {
     text-align: right;
 }
+#preview-container .editReplace .btn-primary
+{
+    background: @color5;
+}
 
-
+#preview-container .slide-list-item:hover .text-ellipsis
+{
+  white-space: normal;  
+}
 
 
 #preview-container .slide-container .slide-arrow
