--- a/src/less/res.less
+++ b/src/less/res.less
@@ -557,6 +557,7 @@
     line-height: 20px;
     color: #2B2C2C;
     margin-top: 15px;
+    position: relative;
 }
 .page-ctrl .res-checkbox-page{
     width: 15px;
