--- a/src/less/basic.less
+++ b/src/less/basic.less
@@ -178,3 +178,10 @@ input[type=checkbox]:checked + label:after {
     opacity: 1;
 }
 
+// 可编辑 xeditable 样式调整
+.editable-wrap .editable-controls > input, .editable-wrap .editable-controls > select, .editable-wrap .editable-controls > textarea{
+    width: 80px;
+}
+.editable-buttons button:last-child{
+    display: none;
+}
