--- a/src/less/res.less
+++ b/src/less/res.less
@@ -402,6 +402,7 @@
     margin-right: 30px;
     padding: 10px 25px;
     border-radius: 6px;
+    cursor: pointer;
 }
 .res-download{
     font-size: 15px;
@@ -442,7 +443,7 @@
     padding: 150px 50px;
 }
 // 列出备课夹
-.addPrepare:hover .res-prepare-list,.addPrepare:hover .res-prepare-thumb{
+.addPrepare:hover .res-prepare-list,.addPrepare:hover .res-prepare-thumb,.addPrepareAll:hover .res-prepare-all{
     display: block;   
 }
 .res-prepare-list{
@@ -492,6 +493,17 @@
     height: 50px;
     position: relative;
 }
+.res-prepare-all{
+    position: absolute;
+    right: 50px;
+    top:33px;
+    background: #fff;
+    padding: 10px 20px;
+    display: none;
+    color: #999;
+    min-width: 100px;
+    z-index: 99999;
+}
 // 备课夹 悬浮
 .prepare-fixed{
     position: fixed;
@@ -512,7 +524,6 @@
         right: 40px;
         margin-left: 3px;
         visibility: hidden;
-        background: #41C9A9;
         padding: 5px;
         border-radius: 3px;
     }
@@ -535,12 +546,21 @@
 .prepare-fixed  .prepare-ctrls{
     float: left;
     height: 100px;
-    width: 100px;
+    width: 150px;
     margin-left: 3px;
     visibility: hidden;
-    background: #41C9A9;
+    border: 2px solid #41C9A9;
+    background: #fff;
     padding: 5px;
     border-radius: 3px;
+    overflow-y: auto;
+}
+.prepare-fixed .ctrls-prepare-list-item{
+    font-size: 14px;
+}
+.prepare-fixed .ctrls-prepare-list-item:hover{
+    color: #219B81;
+    background: #E4F3F7;
 }
 .prepare-fixed .shop-count{
     position: absolute;
@@ -558,6 +578,7 @@
     color: #2B2C2C;
     margin-top: 15px;
     position: relative;
+    margin-left: 15px;
 }
 .page-ctrl .res-checkbox-page{
     width: 15px;
