--- a/src/less/search.less
+++ b/src/less/search.less
@@ -173,17 +173,17 @@
 
 #search-container .sumBox
 {
-    height: 60px;
+    
     padding-left: 50px;
     padding-right: 50px;
-  
+    position: relative;
+    margin-bottom: 10px;
    
 }
-#search-container .sumBox .allCheck
+#search-container .sumBox input[type=checkbox]+label
 {
-    vertical-align: middle;
-     height: 19px;
-     width: 19px;
+    left:70px;
+    top:55%;
 }
 #search-container .sumBox input
 {
