--- a/src/coms/personal-center/views/my-upload.html
+++ b/src/coms/personal-center/views/my-upload.html
@@ -54,11 +54,11 @@
 		</div>
 		<div class="pagination-box">
 			<div class="coms-pagination">
-				<uib-pagination total-items="bigTotalItems" ng-model="bigCurrentPage" max-size="maxSize" boundary-link-numbers="true" previous-text="上一页" next-text="下一页"></uib-pagination>
+				<uib-pagination total-items="totalItems" ng-model="VM.currentPage" max-size="maxSize" boundary-link-numbers="true" previous-text="上一页" next-text="下一页" num-pages="perPage" ng-change="pageChanged()"></uib-pagination>
 				<div class="page-go">
 					<span class="page-text">转到</span>
-					<input class="page-input" />
-					<span class="page-go-btn">Go</span>
+					<input class="page-input" ng-model="pageTo"/>
+					<span class="page-go-btn" ng-click="pageChanged(pageTo)">Go</span>
 				</div>
 			</div>
 		</div>
