--- a/src/coms/personal-center/views/personal-center.html
+++ b/src/coms/personal-center/views/personal-center.html
@@ -61,4 +61,7 @@
 </div>
 
 <!-- 模态框（Modal） -->
+<!-- 上传模态框 -->
 <div  ng-controller="uploadResController" data-ng-include="'/coms/personal-center/views/upload-modal.html'"></div>
+<!-- 编辑上传资源模态框 -->
+<!-- <div  ng-controller="editUploadResCtrl" data-ng-include="'/coms/personal-center/views/edit-res-modal.html'"></div> -->
