--- a/src/coms/res-system/views/sysres-content.html
+++ b/src/coms/res-system/views/sysres-content.html
@@ -100,8 +100,8 @@
 		 	<uib-pagination total-items="bigTotalItems" ng-model="VM.currentPageCtrl" max-size="maxSize"  boundary-link-numbers="true" previous-text="上一页" next-text="下一页" num-pages="perPage" ng-change="pageChanged()"></uib-pagination>
 			<div class="page-go">
 				<span class="page-text">转到</span>
-				<input class="page-input"/>
-				<span class="page-go-btn">Go</span>
+				<input class="page-input" ng-model="pageTo"/>
+				<span class="page-go-btn" ng-click="pageChanged(pageTo)">Go</span>
 			</div>
 		</div> 
 	</div>
