--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -9,11 +9,13 @@
 			<li><a ng-click="logout()">退出</a></li>
 		</ul>
 	</div>
-	<div class="container banner"><img src="assets/img/banner.png" /></div>
-
-	<div class="banner-footer">
-		<div class="banner-footer-header"></div>
-		<div class="banner-footer-footer"></div>
+	<div id="banner" class="headroom">
+		<div class="container banner"><img src="assets/img/banner.png" /></div>
+	
+		<div class="banner-footer">
+			<div class="banner-footer-header"></div>
+			<div class="banner-footer-footer"></div>
+		</div>
 	</div>
 	<div class="main-nav nav-pills">
 		<div class="container">
