--- a/src/less/header.less
+++ b/src/less/header.less
@@ -144,3 +144,27 @@
     background: #fff;
     padding: 10px;
 }
+
+.slide {
+    -webkit-transition: all .25s ease-in-out;
+    -moz-transition: all .25s ease-in-out;
+    -o-transition: all .25s ease-in-out;
+    transition: all .25s ease-in-out
+}
+
+.slide--reset {
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+}
+.slide--reset .banner{
+    height: auto;
+}
+.slide--up {
+    -webkit-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    transform: translateY(-100%);
+}
+.slide--up .banner{
+    height: 190px;
+}
