--- a/src/coms/res-preview/views/comment.html
+++ b/src/coms/res-preview/views/comment.html
@@ -54,14 +54,16 @@
 	<div class="fix-inner">
 		<span class="comment-star">
 				<i class="icon-star" ng-repeat="star in showStar" ng-class="{'starLight':curStar[$index],'starHover':hoverStar[$index]}" ng-mouseover="mouseOverStar($index)" ng-mouseout="mouseOutStar($index)" ng-click="starClick($index)"></i>
-				
-			</span>
+		</span>
 		<span class="comment-count">已有{{VM.info.userNum}}人评分,平均分{{VM.info.avgScore}}</span>
 		<span>下载次数:{{VM.info.dloadTimes}}</span>
 		<span>浏览次数:{{VM.info.clickTimes}}</span>
 
-		<button class="btn btn-danger">加入备课夹</button>
+		<button class="btn btn-danger" ng-click="addToCurrentPrepare('btn')" ng-mouseover="showPre()" ng-mouseout="hidePre()">加入备课夹</button>
 		<span class="down-orign" ng-click="resDownload(VM.resourceId)">下载到本地</span>
+		<ul class="prepareList" ng-show="VM.showPre" ng-mouseover="showPre()" ng-mouseout="hidePre()">
+			<li ng-repeat="item in prepareList track by $index"  class="text-ellipsis" ng-class="curPre?'curPre':''" ng-click="addToCurrentPrepare('list',item.id)">{{$index+1}}、{{item.title}}</li>
+		</ul>
 
 	</div>
 </div>
