--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -284,6 +284,7 @@
     font-size: @leftTabSize;
     line-height: 75px;
     font-size: 18px;
+    position: relative;
 }
 #preview-container .fix-inner span{
     margin:0px 10px;
@@ -303,6 +304,32 @@
     float: right;
     margin: 20px;
     font-size: 18px;
+}
+#preview-container .fix-inner .prepareList
+{
+    position: absolute;
+    right: 20px;
+    top:-130px;
+    z-index:5 ;
+    background: #fff;
+    color:@color12;
+    font-size:@msgFontSize;
+    line-height: 30px;
+    padding-left: 0px;
+    padding:10px;
+    height: 150px;
+    overflow-y: auto;
+    border: 2px solid @color5;
+    width:190px ;
+    
+}
+#preview-container .fix-inner .prepareList li{
+    cursor: pointer;
+    
+}
+#preview-container .curPre
+{
+    color: @color5 !important;
 }
 .comment-star i{
     margin:0px 2px;
