增加进度条

--- a/src/coms/personal-center/views/upload-modal.html
+++ b/src/coms/personal-center/views/upload-modal.html
@@ -18,6 +18,7 @@
 		<div class="tab-content avatar-tab-content">
 			<div role="tabpanel" class="tab-pane active upload-file-content">
 				<div class="button-group">
+					<div id="fsUploadProgress" class="progress-bar-custom"></div>
 					<button class="btn-general" id="pickfiles" ng-click="uploadFile()">上传</button>
 				</div>
 			</div>
