--- a/src/less/basic.less
+++ b/src/less/basic.less
@@ -185,3 +185,11 @@ input[type=checkbox]:checked + label:after {
 .editable-buttons button:last-child{
     display: none;
 }
+
+// 上传进度条样式
+.progressContainer td{
+    width: 540px;
+}
+.progressContainer .status{
+    display: none;
+}
