--- a/src/coms/prepare/views/prepare.html
+++ b/src/coms/prepare/views/prepare.html
@@ -38,7 +38,7 @@
 					</span>
 					<div class="tree-embed" ng-show="showTree">
 						<treecontrol id="tree-embed" click-outside="closeThis()" outside-if-not="tree-embed,catogry-trigger" class="tree-light" tree-model="treedata" on-selection="showSelected(node)" expanded-nodes="expandedNodes" options="opts">
-					     label: {{node.label}} ({{node.id}})
+					     {{node.label}}
 					 	</treecontrol>
 					</div>
 					
