--- a/src/less/customres.less
+++ b/src/less/customres.less
@@ -90,7 +90,7 @@
 }
 #customres-container .subject_box .item_inner:hover
 {
-    border:none;
+    border:1px solid @color6;
     
 }
 #customres-container .subject_box .prepare-all-list
