搜索修改评分

--- a/src/less/search.less
+++ b/src/less/search.less
@@ -2,7 +2,10 @@
 {
     
 }
-
+#search-container .res-title
+{
+    height:30px ;
+}
 
 /*头部搜索*/
 
@@ -11,7 +14,6 @@
     background: @color4;
     font-size: 1.5rem;
     overflow: hidden;
-   
     
 }
 #search-container .search_tools_inner
