--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -250,5 +250,100 @@
     max-height: 80px;
 }
 
+//编辑资源模态框
+.edit-res-modal {
+    background-color: #FFFFFF;
+    font-size: 1.3rem;
+    border: 1px solid #41C9A9;
+    border-radius: 7px;
+    color: #666666;
+    text-align: center;
+    width: 700px;
+    vertical-align: top;
+}
+
+.edit-res-modal img, span {
+    vertical-align: top;
+}
+
+.edit-res-modal .modal-header {
+    padding: 3px 10px;
+    background-color: #41C9A9;
+    color: #FFFFFF;
+}
+
+.edit-res-modal .modal-body {
+    width: 70%;
+    text-align: left;
+    margin: auto;
+}
+
+.edit-res-modal .modal-body p {
+    margin-top: 20px;
+}
+
+.edit-res-modal .modal-body input {
+    width: 180px;
+    height: 25px;
+}
+
+.edit-res-modal .modal-body .keyword-input {
+    width: 260px;
+}
+
+.edit-res-modal .modal-body .btn-op {
+    width: 60px;
+    height: auto;
+    margin-left: 15px;
+    border-radius: 6px;
+}
+
+.edit-list {
+    padding: 15px 10px;
+}
+
+.sp-label {
+    margin-right: 10px;
+    font-size: 1.3rem;
+    color: #666666;
+    display: inline-block;
+    min-width: 55px;
+}
+
+.tag {
+    display: inline-block;
+    min-height: 20px;
+    min-width: 40px;
+    text-align: center;
+    padding: 0 10px;
+    cursor: pointer;
+}
+
+.tag.active {
+    background-color: #3FBBCF;
+    color: #FFFFFF;
+}
+
+.edit-res-modal textarea {
+    width: 350px;
+    height: 70px;
+}
+
+.sp-count-word {
+    margin-left: 80px;
+    display: block;
+}
+
+.sp-count-word span {
+    text-decoration: none;
+    color: #FF0000;
+}
+
+.edit-res-modal .modal-footer{
+    border: none;
+}
+
+
+
 
 
