--- a/src/coms/personal-center/views/my-upload.html
+++ b/src/coms/personal-center/views/my-upload.html
@@ -1,12 +1,68 @@
 <!-- 编辑上传资源模态框 -->
-<div  ng-controller="editUploadResCtrl"></div>
-<script type="text/ng-template" id="avatar.html">
+<div ng-controller="editUploadResCtrl">
+<script type="text/ng-template" id="edit.html">
+<div class="edit-res-modal">
 	<div class="modal-header">
-		<h3 class="cen-h2">编辑资源</h3>
+		<h5>编辑资源</h5>
 	</div>
-    <div class="modal-body avatar-modal-body">
+    <div class="modal-body">
+    	<p>为方便资源的管理，请填写完整的资源信息</p>
+    	<div class="edit-detail-box">
+    		<div class="edit-list">
+    			<img class="red-star-icon" src="assets/img/personalcenter/red_star_icon.png" />
+    			<span class="sp-label">资源名称</span>
+    			<input type="text" ng-model="res.title" />
+    			<button class="btn-op" ng-click="setResTitle(res.title)">确定</button>
+    		</div>
+    		<div class="edit-list">
+    			<img class="red-star-icon" src="assets/img/personalcenter/red_star_icon.png"/>
+    			<span class="sp-label">资源类型</span>
+    			<span class="tag active" ng-bind="res.unifyType"></span>
+    		</div>
+    		<div class="edit-list">
+    			<img class="red-star-icon" src="assets/img/personalcenter/red_star_icon.png"/>
+    			<span class="sp-label">上传至：</span>
+    			<select class="i-select" ng-change="selectTerm(curterm)" ng-model="curterm">
+    				<option ng-repeat="term in VM.terms" ng-bind="term.name" value="{{term}}"></option>
+    			</select>
+    			<select class="i-select">
+    				<option ng-repeat="subject in VM.subjects" ng-bind="subject.name"></option>
+    			</select>
+    			<select class="i-select">
+    				<option ng-repeat="version in VM.versions" ng-bind="version.name">/option>
+    			</select>
+    			<select class="i-select">
+    				<option ng-repeat="book in VM.books" ng-bind="book.name"></option>
+    			</select>
+    		</div>
+    		<div class="edit-list">
+    			<img class="red-star-icon" src="assets/img/personalcenter/red_star_icon.png"/>
+    			<span class="sp-label">共享范围</span>
+    			<span class="tag active">仅自己可见</span>
+    			<span class="tag">本校可见</span>
+    			<span class="tag">本区可见</span>
+    		</div>
+    		<div class="edit-list">
+    			<img class="red-star-icon" src="assets/img/personalcenter/red_star_icon.png"/>
+    			<span class="sp-label">关键词</span>
+    			<input type="text" ng-model="res.keywords" class="keyword-input" placeholder="多个关键词用分号隔开" />
+    		</div>
+    		<div class="edit-list">
+    			<img class="red-star-icon" src="assets/img/personalcenter/red_star_icon.png"/>
+    			<span class="sp-label">资源介绍</span>
+    			<textarea ng-model="res.description" placeholder="选填，主要介绍资源的主要内容，方便资源的管理和分享，限200字">
+    			</textarea>
+    			<span class="sp-count-word"><span ng-model="res.description.length"></span>/200</span>
+    		</div>
+    	</div>
     </div>
+    <div class="modal-footer">
+    	<button class="btn-general" ng-click="editDone()">确定</button>
+		<button class="btn-general" ng-click="close()">取消</button>
+    </div>
+</div>
 </script>
+</div>
 <div class="cen-right-down">
 	<h3 class="cen-h2">我的上传</h3>
 	<div class="type-select-box">
@@ -53,7 +109,7 @@
 						<show-time class="resource-date" data-value="{{list.time | date:'yyyy-MM-dd HH:mm:ss'}}"></show-time>
 					</div>
 					<div class="col-md-2 col-sm-2">
-						<button class="btn-op" ng-click="editRes()">编辑</button>
+						<button class="btn-op" ng-click="editRes(list)">编辑</button>
 						<button class="btn-op" ng-click="deleteSingleRes(list.resId)">删除</button>
 					</div>
 					<div class="clearfix"></div>
