--- a/src/coms/tree/views/tree.html
+++ b/src/coms/tree/views/tree.html
@@ -1,5 +1,5 @@
 ﻿<div ng-controller="TreeController">
- <treecontrol class="tree-light" tree-model="treedata" on-selection="showSelected(node)" selected-node="selected" expanded-nodes="expandedNodes">
+ <treecontrol class="tree-light" tree-model="treedata" on-selection="showSelected(node)" selected-node="selected" expanded-nodes="expandedNodes"  options="opts">
      {{node.label}}
  </treecontrol>
  </div>
