--- a/src/coms/res-preview/views/previewres.html
+++ b/src/coms/res-preview/views/previewres.html
@@ -2,7 +2,7 @@
 
 	<div class="header-nav-tips">
 		<div class="nav_left">
-			<span ng-repeat="navCur in currentNav" ng-class="links[$index]?'links':''" ng-click="back($index,navCur.tfcode)">{{navCur.name}}<i class="icon-angle-right"></i></span>
+			<span ng-repeat="navCur in currentNav" ng-class="links[$index]?'links':''" ng-mouseover="linkMouseover($index)" ng-mouseout="linkMouseout($index)" ng-click="back($index,navCur.tfcode)">{{navCur.name}}<i class="icon-angle-right"></i></span>
 		</div>
 		<div class="nav_right">
 		  <span class="mulu">其他版本目录
